WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284731
REGRESSION(
286869@main
): text in heading of GitHub PR description is not vertically aligned
https://bugs.webkit.org/show_bug.cgi?id=284731
Summary
REGRESSION(286869@main): text in heading of GitHub PR description is not vert...
alan
Reported
2024-12-15 20:20:57 PST
<
rdar://141271678
>
Attachments
Patch
(9.52 KB, patch)
2024-12-15 20:24 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(10.44 KB, patch)
2024-12-16 06:22 PST
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-12-15 20:24:36 PST
Created
attachment 473574
[details]
Patch
Tim Nguyen (:ntim)
Comment 2
2024-12-15 22:11:42 PST
Comment on
attachment 473574
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=473574&action=review
> LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-layout-baseline-006.html:2 > +<title>CSS Containment Test: Layout containment supress baseline</title>
suppresses
Tim Nguyen (:ntim)
Comment 3
2024-12-15 22:11:44 PST
View in context:
https://bugs.webkit.org/attachment.cgi?id=473574&action=review
> LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-layout-baseline-006.html:2 > +<title>CSS Containment Test: Layout containment supress baseline</title>
suppresses
alan
Comment 4
2024-12-16 06:13:57 PST
lol, I should fix -005.html too where I copied it from.
alan
Comment 5
2024-12-16 06:22:48 PST
Created
attachment 473575
[details]
[fast-cq]Patch
EWS
Comment 6
2024-12-16 09:15:02 PST
Committed
287888@main
(331b574e779c): <
https://commits.webkit.org/287888@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 473575
[details]
.
Tim Nguyen (:ntim)
Comment 7
2025-01-02 15:28:40 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/49879
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug