REGRESSION(286869@main): text in heading of GitHub PR description is not vertically aligned https://bugs.webkit.org/show_bug.cgi?id=284731 <rdar://141271678>

Reviewed by Antti Koivisto.

Let's not try to synthesize a block-level box's baseline when it has layout containment. Such boxes behave as if they had no baseline.
This behavior matches both Firefox and Chrome.

* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-layout-baseline-006-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-layout-baseline-006-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-layout-baseline-006.html: Added.
* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::firstLineBaseline const):
(WebCore::RenderBlock::lastLineBaseline const):
(WebCore::RenderBlock::inlineBlockBaseline const):
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::inlineBlockBaseline const):
* Source/WebCore/rendering/RenderBox.h:
(WebCore::RenderBox::firstLineBaseline const):
(WebCore::RenderBox::lastLineBaseline const):
(WebCore::RenderBox::inlineBlockBaseline const):

Canonical link: https://commits.webkit.org/287888@main